# raspi4-baremetal-hypervisor

./: .gitmodules  CMakeLists.txt  README.md
cmake/: baremetal-target.cmake  toolchain-aarch64-none-elf-gcc.cmake
cmake/toolchains/: aarch64-none-elf-gcc.cmake
host_uart_writer/: CMakeLists.txt  main.cpp
host_uart_writer/task6/: CMakeLists.txt  main.cpp
host_uart_writer/task7/: CMakeLists.txt  main.cpp
libs/utils/: CMakeLists.txt
libs/utils/include/utils/: config.h  multicore.h  uart.h
libs/utils/src/: multicore.c  uart.c
libs/utils/src/exceptions/: el2.c  exceptions.S
libs/utils/src/registers/: hcr_el2.c  spsr_elx.c
task_0/: CMakeLists.txt  Makefile  start.S
task_0/include/: uart.h
task_0/src/: main.c  uart.c
task_1/: CMakeLists.txt  start.S
task_1/include/: uart.h
task_1/include/exceptions/: exceptions.h
task_1/src/: main.c  uart.c
task_1/src/exceptions/: el2.c  exceptions.c
task_2/: CMakeLists.txt  start.S
task_2/include/: registers.h  uart.h
task_2/include/exceptions/: el2.h  exceptions.h
task_2/src/: main.c  uart.c
task_2/src/exceptions/: el2.S  el2.c
task_3/: CMakeLists.txt
task_3/src/: main.c  start.S
task_4/: CMakeLists.txt
task_4/kernel/src/: main.c
task_4/program/src/: main.S
task_5/: CMakeLists.txt  link.ld
task_5/src/: main.c  start.S
tasks/: CMakeLists.txt
tasks/cmake/: baremetal-target.cmake  toolchain-aarch64-none-elf-gcc.cmake
tasks/libs/utils/: CMakeLists.txt
tasks/libs/utils/include/utils/: config.h  multicore.h  string.h  uart.h
tasks/libs/utils/include/utils/exceptions/: el2.h  exceptions.h
tasks/libs/utils/include/utils/registers/: hcr_el2.h  register.h  spsr_elx.h
tasks/libs/utils/src/: multicore.S  multicore.c  string.c  uart.c
tasks/libs/utils/src/exceptions/: el2.S  el2.c  exceptions.c
tasks/task_0/: CMakeLists.txt
tasks/task_0/src/: start.S
tasks/task_1/: CMakeLists.txt  aarch64-exception-model.md
tasks/task_1/src/: main.c  start.S
tasks/task_2/: CMakeLists.txt
tasks/task_2/include/: dump_registers.h
tasks/task_2/src/: main.c  start.S
tasks/task_3/: CMakeLists.txt
tasks/task_3/src/: main.c
tasks/task_4/: CMakeLists.txt
tasks/task_4/kernel/src/: main.c  start.S
tasks/task_4/program/: link.ld
tasks/task_4/program/src/: main.c
tasks/task_5/: CMakeLists.txt  link.ld
tasks/task_5/src/: main.c  start.S
tasks/task_6/: CMakeLists.txt
tasks/task_6/kernel/: link.ld
tasks/task_6/kernel/src/: main.c  start.S
tasks/task_7/: CMakeLists.txt
tasks/task_7/kernel/: link.ld
tasks/task_7/kernel/src/: main.c
tasks/task_7/program/: link.ld
tasks/task_7/program/src/: invalid_main.c
